# lfm-physics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  32_solar_run.txt  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PARTICLE_INVENTORY_AUDIT.md  PARTICLE_VALIDATION_PLAN.md  PROJECT_PLAN.md  README.md  SECURITY.md  _debug_tests.py  pyproject.toml  run_user_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
benchmarks/: README.md  bench_evolver.py  bench_fields.py
docs/: Makefile  PARTICLE_MOTION.md  changelog.rst  conf.py  contributing.rst  examples.md  index.rst  installation.md  make.bat  primer.md  quickstart.md  requirements.txt  troubleshooting.md
docs/api/: analysis.rst  config.rst  constants.rst  core.rst  fields.rst  io.rst  simulation.rst  units.rst  viz.rst
examples/: 01_empty_space.py  02_first_particle.py  03_measuring_gravity.py  04_two_bodies.py  05_electric_charge.py  06_dark_matter.py  07_matter_creation.py  08_universe.py  09_hydrogen_atom.py  10_hydrogen_molecule.py  11_oxygen.py  12_fluid_dynamics.py  13_weak_force.py  14_strong_force.py  15_visualization.py  16_lorentz_anisotropy.py  17_confinement_v16.py  18_collision.py  18_particle_collision.py  19_rotating_galaxy.py  20_gravitational_waves.py  21_wave_interference.py  22_soliton_modes.py  23_double_slit.py  24_collision.py  24_particle_catalog.py  25_electron_at_rest.py  26_electron_traverse.py  27_electron_vs_muon.py  28_coulomb_force.py  29_hydrogen_atom.py  30_hydrogen_molecule.py  31_galaxy_dark_matter.py  33_higgs_boson.py  34_spin_720.py  35_spin_precession.py  36_spin_entanglement.py  37_spin_entanglement_showcase.py  38_qnm_mode_projection.py  39_qnm_falsification_next5.py  (+12 more)
experiments/quantitative/: exp_01_mass_energy.py  exp_02_newton_gravity.py  exp_03_coulomb_law.py  exp_04_kg_dispersion.py  exp_05_gravitational_redshift.py  exp_06_mass_hierarchy.py  exp_07_string_tension.py  exp_08_dark_energy_modes.py  run_all.py
lfm/: __init__.py  config.py  config_presets.py  constants.py  planning.py  simulation.py  sweep.py  units.py
lfm/analysis/: __init__.py  angular_momentum.py  color.py  confinement.py  cosmology.py  energy.py  grav_waves.py  measurements.py  metric.py  metrics.py  observables.py  phase.py  ringdown.py  sparc.py  spectrum.py  spinor.py  structure.py  tracker.py
lfm/core/: __init__.py  evolver.py  integrator.py  stencils.py
lfm/core/backends/: __init__.py  cupy_backend.py  job_schema.py  kernel_source.py  numpy_backend.py  protocol.py  remote_backend.py
lfm/experiment/: __init__.py  barrier.py  collision.py  common.py  detector.py  dispersion.py  double_slit.py  entanglement.py  ringdown.py  runner.py  source.py
lfm/fields/: __init__.py  arrangements.py  boosted.py  equilibrium.py  light.py  random.py  soliton.py  spinor.py
lfm/formulas/: __init__.py  masses.py  predictions.py
lfm/io/: __init__.py  snapshots.py
lfm/particles/: __init__.py  catalog.py  composite.py  factory.py  motion.py  solver.py
lfm/scenarios/: __init__.py  celestial.py
lfm/viz/: __init__.py  _util.py  animation.py  celestial.py  collision.py  evolution.py  fields.py  galaxy.py  projection.py  quantum.py  radial.py  slices.py  spacetime.py  spectrum.py  sweep.py  tracker.py
paper_experiments/: why_is_c_what_it_is.py
scripts/: _check_chi_aniso.py  _check_chi_gradient.py  _chi_stability.py  _debug_phase.py  _higgs_test.txt  _orbit_clean_test.py  _orbit_complex_test.py  _orbit_long_test.py  _orbit_test.py  _rewrite_33.py  _test_amp_stability.py  _test_anim_n128.py  _test_complex_stability.py  _test_mask_radius.py  _test_orbit_raw.py  _test_psi_prev.py  _test_step_tracking.py  _test_tracking_fix.py  _test_velocity_check.py  _trace_nan.py
tests/: conftest.py  test_analysis.py  test_backends.py  test_catalog.py  test_config.py  test_config_presets.py  test_constants.py  test_coverage_boost.py  test_edge_cases.py  test_evolver.py  test_fields.py  test_formulas.py  test_gpu_parity.py  test_integration.py  test_integrator.py  test_particles.py  test_physics_modules.py  test_place_particle.py  test_planning.py  test_remote_backend.py  test_ringdown_analysis.py  test_ringdown_experiment.py  test_sa_fields.py  test_simulation.py  test_soliton_physics.py  test_solver.py  test_stencils.py  test_v11_features.py  test_v12_features.py
tests/validation/: __init__.py  conftest.py  test_annihilation.py  test_baryon.py  test_charge_quantization.py  test_color_singlet.py  test_coulomb_law.py  test_dark_matter_halo.py  test_dispersion.py  test_ee_repulsion.py  test_electron.py  test_ep_attraction.py  test_flux_tube.py  test_gravity_attraction.py  test_hydrogen_atom.py  test_hydrogen_spectrum.py  test_lensing.py  test_muon.py  test_neutrino.py  test_neutron.py  test_pair_creation.py  test_particle_sweep.py  test_positron.py  test_proton.py  test_quark_hadron_stability.py  test_single_quark.py  test_string_tension.py  test_time_dilation.py
